# ws

./: README.md
MOCHA/: risk_mocha_v1_corridor.csv  risk_mocha_v1_guide.csv  risk_mocha_v1_trajectory.csv
MOCHA/mocha_planner/: CMakeLists.txt  package.xml
MOCHA/mocha_planner/config/: risk_mocha_v1.yaml
MOCHA/mocha_planner/include/mocha_planner/core/: ackermann_bilayer_optimizer.hpp  esdf_map.hpp  grid_astar_planner.hpp  mco_optimizer.hpp  perception_simulator.hpp  reference_selector.hpp  risk_corridor.hpp  risk_field_builder.hpp  risk_grid.hpp  trajectory_utils.hpp  types.hpp
MOCHA/mocha_planner/launch/: risk_mocha_v1_rviz.launch.py
MOCHA/mocha_planner/src/: risk_mocha_v1_demo.cpp
MOCHA/mocha_planner/src/core/: ackermann_bilayer_optimizer.cpp  esdf_map.cpp  grid_astar_planner.cpp  mco_optimizer.cpp  perception_simulator.cpp  reference_selector.cpp  risk_corridor.cpp  risk_field_builder.cpp  risk_grid.cpp  trajectory_utils.cpp
MOCHA/mocha_planner/src/ros/: risk_mocha_v1_rviz_node.cpp
MOCHA/mocha_planner/test/: test_core_ackermann_bilayer_optimizer.cpp  test_core_mco_optimizer.cpp  test_grid_astar_planner.cpp  test_mco_risk_penalty.cpp  test_perception_risk_builder.cpp  test_risk_aware_astar.cpp  test_risk_corridor.cpp  test_risk_grid.cpp
MOCHA/pmocha_experiments/: CMakeLists.txt
MOCHA/pmocha_experiments/config/: v0_topics.yaml
MOCHA/pmocha_experiments/include/pmocha_experiments/: esdf_grid.hpp  occupancy_grid.hpp  single_astar.hpp  single_corridor.hpp  trajectory_evaluator.hpp
MOCHA/pmocha_experiments/launch/: pmocha_sensor_sim.launch.py  pmocha_v0_pipeline.launch.py
MOCHA/pmocha_experiments/rviz/: pmocha_v0.rviz
MOCHA/pmocha_experiments/scripts/: teleop.sh
MOCHA/pmocha_experiments/src/: esdf_grid.cpp  occupancy_grid.cpp  perception_grid_node.cpp  planner_node.cpp  single_astar.cpp  single_corridor.cpp  trajectory_evaluator.cpp
MOCHA/pmocha_experiments/test/: test_grid_corridor_pipeline.cpp  test_mocha_single_corridor_pipeline.cpp
MOCHA/pmocha_experiments/urdf/: pioneer3at_body.urdf.xacro  pmocha_dynus_ground_robot.urdf.xacro  pmocha_ground_robot.urdf.xacro
MOCHA/pmocha_experiments/worlds/: corner_occlusion.world
docs/: pmocha_research_plan.md  pmocha_research_plan_zh.md  reference.md
install/: local_setup.sh  setup.sh
install/pmocha_experiments/include/mocha_planner/core/: ackermann_bilayer_optimizer.hpp  mco_optimizer.hpp  types.hpp
install/pmocha_experiments/include/pmocha_experiments/: esdf_grid.hpp  occupancy_grid.hpp  single_astar.hpp  single_corridor.hpp  trajectory_evaluator.hpp
install/pmocha_experiments/lib/pmocha_experiments/: perception_grid_node  planner_node  teleop.sh
install/pmocha_experiments/share/ament_index/resource_index/package_run_dependencies/: pmocha_experiments
install/pmocha_experiments/share/ament_index/resource_index/parent_prefix_path/: pmocha_experiments
install/pmocha_experiments/share/pmocha_experiments/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/pmocha_experiments/share/pmocha_experiments/cmake/: pmocha_experimentsConfig-version.cmake  pmocha_experimentsConfig.cmake
install/pmocha_experiments/share/pmocha_experiments/config/: v0_topics.yaml
install/pmocha_experiments/share/pmocha_experiments/environment/: ament_prefix_path.dsv  path.dsv
install/pmocha_experiments/share/pmocha_experiments/launch/: pmocha_sensor_sim.launch.py  pmocha_v0_pipeline.launch.py
install/pmocha_experiments/share/pmocha_experiments/meshes/p3at_meshes/: axle.stl  back_sonar.stl  chassis.stl  front_sonar.stl  left_hubcap.stl  right_hubcap.stl  top.stl  wheel.stl
install/pmocha_experiments/share/pmocha_experiments/meshes/real_sense/: d435.dae
install/pmocha_experiments/share/pmocha_experiments/rviz/: dynus_sim_ground_robot.rviz  pmocha_v0.rviz
install/pmocha_experiments/share/pmocha_experiments/urdf/: pioneer3at_body.urdf.xacro  pmocha_dynus_ground_robot.urdf.xacro  pmocha_ground_robot.urdf.xacro
install/pmocha_experiments/share/pmocha_experiments/worlds/: corner_occlusion.world
install/pmocha_experiments/share/pmocha_experiments/worlds/dynus/: empty.world  office.world  simple_tunnel.world
log/: latest_build
